Revert "less go"
This reverts commit 983b62e3aa455878344f51ba3cba03f3c2bafe9c.